fix(Navigation):fixes overflow

--- a/css/src/components/navigation.css
+++ b/css/src/components/navigation.css
@@ -20,7 +20,7 @@
 
 .Navigation-body {
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   padding-right: var(--spacing);
 }
